--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,20 +46,54 @@ jobs:
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       
-      - name: Update App Runner service
+      - name: Create or update App Runner service
         run: |
-          # Update the App Runner service with new image
-          aws apprunner start-deployment --service-arn $(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE'].ServiceArn" --output text)
+          # Check if service exists
+          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE'].ServiceArn" --output text)
+          
+          if [ -z "$SERVICE_ARN" ]; then
+            echo "Service doesn't exist, creating new App Runner service..."
+            
+            # Create the service using the configuration file
+            SERVICE_ARN=$(aws apprunner create-service \
+              --service-name "$APP_RUNNER_SERVICE" \
+              --source-configuration '{
+                "ImageRepository": {
+                  "ImageIdentifier": "'$ECR_REGISTRY'/'$ECR_REPOSITORY':latest",
+                  "ImageConfiguration": {
+                    "Port": "8080",
+                    "RuntimeEnvironmentVariables": {
+                      "ASPNETCORE_ENVIRONMENT": "Production",
+                      "ASPNETCORE_URLS": "http://+:8080"
+                    }
+                  },
+                  "ImageRepositoryType": "ECR"
+                },
+                "AutoDeploymentsEnabled": true
+              }' \
+              --instance-configuration '{
+                "Cpu": "0.25 vCPU",
+                "Memory": "0.5 GB"
+              }' \
+              --query "Service.ServiceArn" \
+              --output text)
+            
+            echo "Created new service with ARN: $SERVICE_ARN"
+          else
+            echo "Service exists, starting deployment update..."
+            aws apprunner start-deployment --service-arn "$SERVICE_ARN"
+          fi
+          
+          # Store service ARN for later steps
+          echo "SERVICE_ARN=$SERVICE_ARN" >> $GITHUB_ENV
       
       - name: Wait for deployment to complete
         run: |
-          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE'].ServiceArn" --output text)
           aws apprunner wait service-deployment-completed --service-arn $SERVICE_ARN
       
       - name: Get service URL
         id: get-url
         run: |
-          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE'].ServiceArn" --output text)
           SERVICE_URL=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.ServiceUrl" --output text)
           echo "service_url=$SERVICE_URL" >> $GITHUB_OUTPUT
           echo "🚀 Your Personal Info System is deployed at: $SERVICE_URL"
