--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,39 @@ jobs:
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       
+      - name: Create IAM role for App Runner
+        run: |
+          # Create trust policy for App Runner
+          cat > trust-policy.json << 'EOF'
+          {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Service": "tasks.apprunner.amazonaws.com"
+                },
+                "Action": "sts:AssumeRole"
+              }
+            ]
+          }
+          EOF
+          
+          # Create the IAM role
+          aws iam create-role \
+            --role-name AppRunnerECRAccessRole \
+            --assume-role-policy-document file://trust-policy.json || echo "Role already exists"
+          
+          # Attach the App Runner ECR access policy
+          aws iam attach-role-policy \
+            --role-name AppRunnerECRAccessRole \
+            --policy-arn arn:aws:iam::aws:policy/service-role/AppRunnerServicePolicyForECRAccess || echo "Policy already attached"
+          
+          # Get the role ARN
+          ROLE_ARN=$(aws iam get-role --role-name AppRunnerECRAccessRole --query 'Role.Arn' --output text)
+          echo "App Runner role ARN: $ROLE_ARN"
+          echo "ROLE_ARN=$ROLE_ARN" >> $GITHUB_ENV
+      
       - name: Create or update App Runner service
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -56,8 +89,9 @@ jobs:
           if [ -z "$SERVICE_ARN" ]; then
             echo "Service doesn't exist, creating new App Runner service..."
             echo "Using ECR registry: $ECR_REGISTRY"
+            echo "Using IAM role: $ROLE_ARN"
             
-            # Create the service using the configuration file
+            # Create the service with proper authentication
             SERVICE_ARN=$(aws apprunner create-service \
               --service-name "$APP_RUNNER_SERVICE" \
               --source-configuration '{
@@ -70,13 +104,17 @@ jobs:
                       "ASPNETCORE_URLS": "http://+:8080"
                     }
                   },
-                  "ImageRepositoryType": "ECR"
+                  "ImageRepositoryType": "ECR",
+                  "ImageRepositoryCredentials": {
+                    "CredentialsProvider": "ECR"
+                  }
                 },
                 "AutoDeploymentsEnabled": true
               }' \
               --instance-configuration '{
                 "Cpu": "0.25 vCPU",
-                "Memory": "0.5 GB"
+                "Memory": "0.5 GB",
+                "InstanceRoleArn": "'$ROLE_ARN'"
               }' \
               --query "Service.ServiceArn" \
               --output text)
