--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
                   "Sid": "AppRunnerAccess",
                   "Effect": "Allow",
                   "Principal": {
-                    "AWS": "arn:aws:iam::486151888818:role/AppRunnerECRAccessRole"
+                    "AWS": "arn:aws:iam::486151888818:role/AppRunnerECRAccessRole2"
                   },
                   "Action": [
                     "ecr:GetDownloadUrlForLayer",
@@ -88,16 +88,16 @@ jobs:
           
           # Create the IAM role
           aws iam create-role \
-            --role-name AppRunnerECRAccessRole \
+            --role-name AppRunnerECRAccessRole2 \
             --assume-role-policy-document file://trust-policy.json || echo "Role already exists"
           
           # Attach the custom ECR access policy
           aws iam attach-role-policy \
-            --role-name AppRunnerECRAccessRole \
+            --role-name AppRunnerECRAccessRole2 \
             --policy-arn arn:aws:iam::486151888818:policy/AppRunnerECRPolicy || echo "Policy already attached"
           
           # Get the role ARN
-          ROLE_ARN=$(aws iam get-role --role-name AppRunnerECRAccessRole --query 'Role.Arn' --output text)
+          ROLE_ARN=$(aws iam get-role --role-name AppRunnerECRAccessRole2 --query 'Role.Arn' --output text)
           echo "App Runner role ARN: $ROLE_ARN"
           echo "ROLE_ARN=$ROLE_ARN" >> $GITHUB_ENV
           
@@ -153,7 +153,24 @@ jobs:
       
       - name: Wait for deployment to complete
         run: |
-          aws apprunner wait service-deployment-completed --service-arn $SERVICE_ARN
+          echo "Waiting for deployment to complete..."
+          while true; do
+            STATUS=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.Status" --output text)
+            OPERATION_STATUS=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.OperationSummary.Status" --output text)
+            
+            echo "Service Status: $STATUS, Operation Status: $OPERATION_STATUS"
+            
+            if [ "$STATUS" = "RUNNING" ] && [ "$OPERATION_STATUS" = "SUCCEEDED" ]; then
+              echo "✅ Deployment completed successfully!"
+              break
+            elif [ "$OPERATION_STATUS" = "FAILED" ]; then
+              echo "❌ Deployment failed!"
+              exit 1
+            else
+              echo "⏳ Deployment in progress, waiting 30 seconds..."
+              sleep 30
+            fi
+          done
       
       - name: Get service URL
         id: get-url
