--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Personal Info System to AWS App Runner
+name: Deploy Full Stack Personal Info System to AWS App Runner
 
 on:
   push:
@@ -7,9 +7,12 @@ on:
 
 env:
   AWS_REGION: us-east-2
-  ECR_REPOSITORY: personal-info-system
-  APP_RUNNER_SERVICE: personal-info-system
+  ECR_REPOSITORY_API: personal-info-api
+  ECR_REPOSITORY_BLAZOR: personal-info-blazor
+  API_SERVICE_NAME: personal-info-api
+  BLAZOR_SERVICE_NAME: personal-info-blazor
   API_PROJECT_PATH: src/PersonalInfoApi
+  BLAZOR_PROJECT_PATH: src/PersonalInfoBlazor
 
 jobs:
   deploy:
@@ -30,14 +33,22 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
       
-      - name: Create ECR repository if it doesn't exist
+      - name: Create ECR repositories
         run: |
-          aws ecr describe-repositories --repository-names $ECR_REPOSITORY --region $AWS_REGION || \
-          aws ecr create-repository --repository-name $ECR_REPOSITORY --region $AWS_REGION
+          # Create API repository
+          aws ecr describe-repositories --repository-names $ECR_REPOSITORY_API --region $AWS_REGION || \
+          aws ecr create-repository --repository-name $ECR_REPOSITORY_API --region $AWS_REGION
           
-          # Set repository policy to allow App Runner access
+          # Create Blazor repository
+          aws ecr describe-repositories --repository-names $ECR_REPOSITORY_BLAZOR --region $AWS_REGION || \
+          aws ecr create-repository --repository-name $ECR_REPOSITORY_BLAZOR --region $AWS_REGION
+          
+          # Set repository policies to allow App Runner access
+          ROLE_ARN="arn:aws:iam::486151888818:role/AppRunnerECRAccessRole2"
+          
+          # API repository policy
           aws ecr set-repository-policy \
-            --repository-name $ECR_REPOSITORY \
+            --repository-name $ECR_REPOSITORY_API \
             --region $AWS_REGION \
             --policy-text '{
               "Version": "2012-10-17",
@@ -46,7 +57,7 @@ jobs:
                   "Sid": "AppRunnerAccess",
                   "Effect": "Allow",
                   "Principal": {
-                    "AWS": "arn:aws:iam::486151888818:role/AppRunnerECRAccessRole2"
+                    "AWS": "'$ROLE_ARN'"
                   },
                   "Action": [
                     "ecr:GetDownloadUrlForLayer",
@@ -55,18 +66,51 @@ jobs:
                   ]
                 }
               ]
-            }' || echo "Repository policy already set"
+            }' || echo "API repository policy already set"
+          
+          # Blazor repository policy
+          aws ecr set-repository-policy \
+            --repository-name $ECR_REPOSITORY_BLAZOR \
+            --region $AWS_REGION \
+            --policy-text '{
+              "Version": "2012-10-17",
+              "Statement": [
+                {
+                  "Sid": "AppRunnerAccess",
+                  "Effect": "Allow",
+                  "Principal": {
+                    "AWS": "'$ROLE_ARN'"
+                  },
+                  "Action": [
+                    "ecr:GetDownloadUrlForLayer",
+                    "ecr:BatchGetImage",
+                    "ecr:BatchCheckLayerAvailability"
+                  ]
+                }
+              ]
+            }' || echo "Blazor repository policy already set"
       
-      - name: Build and push Docker image
+      - name: Build and push API Docker image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # Build and push image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          # Build and push API image
+          docker build -f Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY_API:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_API:$IMAGE_TAG
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY_API:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY_API:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_API:latest
+      
+      - name: Build and push Blazor Docker image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          # Build and push Blazor image
+          docker build -f Dockerfile.Blazor -t $ECR_REGISTRY/$ECR_REPOSITORY_BLAZOR:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_BLAZOR:$IMAGE_TAG
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY_BLAZOR:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY_BLAZOR:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_BLAZOR:latest
       
       - name: Create IAM role for App Runner
         run: |
@@ -105,24 +149,20 @@ jobs:
           echo "Waiting for IAM role to propagate..."
           sleep 30
       
-      - name: Create or update App Runner service
+      - name: Deploy API service
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          # Check if service exists
-          SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE'].ServiceArn" --output text)
+          # Check if API service exists
+          API_SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$API_SERVICE_NAME'].ServiceArn" --output text)
           
-          if [ -z "$SERVICE_ARN" ]; then
-            echo "Service doesn't exist, creating new App Runner service..."
-            echo "Using ECR registry: $ECR_REGISTRY"
-            echo "Using IAM role: $ROLE_ARN"
-            
-            # Create the service with proper authentication
-            SERVICE_ARN=$(aws apprunner create-service \
-              --service-name "$APP_RUNNER_SERVICE" \
+          if [ -z "$API_SERVICE_ARN" ]; then
+            echo "Creating new API service..."
+            API_SERVICE_ARN=$(aws apprunner create-service \
+              --service-name "$API_SERVICE_NAME" \
               --source-configuration '{
                 "ImageRepository": {
-                  "ImageIdentifier": "'$ECR_REGISTRY'/'$ECR_REPOSITORY':latest",
+                  "ImageIdentifier": "'$ECR_REGISTRY'/'$ECR_REPOSITORY_API':latest",
                   "ImageConfiguration": {
                     "Port": "8080",
                     "RuntimeEnvironmentVariables": {
@@ -136,74 +176,154 @@ jobs:
               }' \
               --instance-configuration '{
                 "Cpu": "0.25 vCPU",
-                "Memory": "0.5 GB",
+                "Memory": "1 GB",
                 "InstanceRoleArn": "'$ROLE_ARN'"
               }' \
               --query "Service.ServiceArn" \
               --output text)
             
-            echo "Created new service with ARN: $SERVICE_ARN"
+            echo "Created API service with ARN: $API_SERVICE_ARN"
           else
-            echo "Service exists, starting deployment update..."
-            aws apprunner start-deployment --service-arn "$SERVICE_ARN"
+            echo "API service exists, starting deployment update..."
+            aws apprunner start-deployment --service-arn "$API_SERVICE_ARN"
           fi
           
-          # Store service ARN for later steps
-          echo "SERVICE_ARN=$SERVICE_ARN" >> $GITHUB_ENV
+          # Store API service ARN
+          echo "API_SERVICE_ARN=$API_SERVICE_ARN" >> $GITHUB_ENV
       
-      - name: Wait for deployment to complete
+      - name: Wait for API deployment to complete
         run: |
-          echo "Waiting for deployment to complete..."
+          echo "Waiting for API deployment to complete..."
           while true; do
-            STATUS=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.Status" --output text)
-            OPERATION_STATUS=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.OperationSummary.Status" --output text)
+            STATUS=$(aws apprunner describe-service --service-arn $API_SERVICE_ARN --query "Service.Status" --output text)
+            OPERATION_STATUS=$(aws apprunner describe-service --service-arn $API_SERVICE_ARN --query "Service.OperationSummary.Status" --output text)
             
-            echo "Service Status: $STATUS, Operation Status: $OPERATION_STATUS"
+            echo "API Service Status: $STATUS, Operation Status: $OPERATION_STATUS"
             
-            if [ "$STATUS" = "RUNNING" ] && [ "$OPERATION_STATUS" = "SUCCEEDED" ]; then
-              echo "✅ Deployment completed successfully!"
+            if [ "$STATUS" = "RUNNING" ] && ([ "$OPERATION_STATUS" = "SUCCEEDED" ] || [ "$OPERATION_STATUS" = "None" ]); then
+              echo "✅ API deployment completed successfully!"
               break
             elif [ "$OPERATION_STATUS" = "FAILED" ]; then
-              echo "❌ Deployment failed!"
+              echo "❌ API deployment failed!"
               exit 1
             else
-              echo "⏳ Deployment in progress, waiting 30 seconds..."
+              echo "⏳ API deployment in progress, waiting 30 seconds..."
               sleep 30
             fi
           done
       
-      - name: Get service URL
-        id: get-url
+      - name: Get API service URL
+        id: get-api-url
         run: |
-          SERVICE_URL=$(aws apprunner describe-service --service-arn $SERVICE_ARN --query "Service.ServiceUrl" --output text)
-          echo "service_url=$SERVICE_URL" >> $GITHUB_OUTPUT
-          echo "🚀 Your Personal Info System is deployed at: $SERVICE_URL"
+          API_SERVICE_URL=$(aws apprunner describe-service --service-arn $API_SERVICE_ARN --query "Service.ServiceUrl" --output text)
+          echo "api_url=$API_SERVICE_URL" >> $GITHUB_OUTPUT
+          echo "🚀 API service deployed at: $API_SERVICE_URL"
       
-      - name: Test deployment
+      - name: Deploy Blazor service
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          API_SERVICE_URL: ${{ steps.get-api-url.outputs.api_url }}
         run: |
-          SERVICE_URL=${{ steps.get-url.outputs.service_url }}
-          echo "Testing deployment at: $SERVICE_URL"
+          # Check if Blazor service exists
+          BLAZOR_SERVICE_ARN=$(aws apprunner list-services --query "ServiceSummaryList[?ServiceName=='$BLAZOR_SERVICE_NAME'].ServiceArn" --output text)
           
-          # Wait a bit for the service to be fully ready
+          if [ -z "$BLAZOR_SERVICE_ARN" ]; then
+            echo "Creating new Blazor service..."
+            BLAZOR_SERVICE_ARN=$(aws apprunner create-service \
+              --service-name "$BLAZOR_SERVICE_NAME" \
+              --source-configuration '{
+                "ImageRepository": {
+                  "ImageIdentifier": "'$ECR_REGISTRY'/'$ECR_REPOSITORY_BLAZOR':latest",
+                  "ImageConfiguration": {
+                    "Port": "8080",
+                    "RuntimeEnvironmentVariables": {
+                      "ASPNETCORE_ENVIRONMENT": "Production",
+                      "ASPNETCORE_URLS": "http://+:8080",
+                      "ApiSettings__BaseUrl": "'$API_SERVICE_URL'"
+                    }
+                  },
+                  "ImageRepositoryType": "ECR"
+                },
+                "AutoDeploymentsEnabled": true
+              }' \
+              --instance-configuration '{
+                "Cpu": "0.25 vCPU",
+                "Memory": "1 GB",
+                "InstanceRoleArn": "'$ROLE_ARN'"
+              }' \
+              --query "Service.ServiceArn" \
+              --output text)
+            
+            echo "Created Blazor service with ARN: $BLAZOR_SERVICE_ARN"
+          else
+            echo "Blazor service exists, starting deployment update..."
+            aws apprunner start-deployment --service-arn "$BLAZOR_SERVICE_ARN"
+          fi
+          
+          # Store Blazor service ARN
+          echo "BLAZOR_SERVICE_ARN=$BLAZOR_SERVICE_ARN" >> $GITHUB_ENV
+      
+      - name: Wait for Blazor deployment to complete
+        run: |
+          echo "Waiting for Blazor deployment to complete..."
+          while true; do
+            STATUS=$(aws apprunner describe-service --service-arn $BLAZOR_SERVICE_ARN --query "Service.Status" --output text)
+            OPERATION_STATUS=$(aws apprunner describe-service --service-arn $BLAZOR_SERVICE_ARN --query "Service.OperationSummary.Status" --output text)
+            
+            echo "Blazor Service Status: $STATUS, Operation Status: $OPERATION_STATUS"
+            
+            if [ "$STATUS" = "RUNNING" ] && ([ "$OPERATION_STATUS" = "SUCCEEDED" ] || [ "$OPERATION_STATUS" = "None" ]); then
+              echo "✅ Blazor deployment completed successfully!"
+              break
+            elif [ "$OPERATION_STATUS" = "FAILED" ]; then
+              echo "❌ Blazor deployment failed!"
+              exit 1
+            else
+              echo "⏳ Blazor deployment in progress, waiting 30 seconds..."
+              sleep 30
+            fi
+          done
+      
+      - name: Get Blazor service URL
+        id: get-blazor-url
+        run: |
+          BLAZOR_SERVICE_URL=$(aws apprunner describe-service --service-arn $BLAZOR_SERVICE_ARN --query "Service.ServiceUrl" --output text)
+          echo "blazor_url=$BLAZOR_SERVICE_URL" >> $GITHUB_OUTPUT
+          echo "🚀 Blazor service deployed at: $BLAZOR_SERVICE_URL"
+      
+      - name: Test deployments
+        run: |
+          API_URL=${{ steps.get-api-url.outputs.api_url }}
+          BLAZOR_URL=${{ steps.get-blazor-url.outputs.blazor_url }}
+          
+          echo "Testing API deployment at: $API_URL"
+          echo "Testing Blazor deployment at: $BLAZOR_URL"
+          
+          # Wait a bit for services to be fully ready
           sleep 30
           
-          # Test health endpoint
-          curl -f "$SERVICE_URL/api/health" || echo "⚠️ Health check failed"
+          # Test API health endpoint
+          curl -f "$API_URL/api/health" || echo "⚠️ API health check failed"
           
-          # Test main page
-          curl -f "$SERVICE_URL" || echo "⚠️ Main page check failed"
+          # Test Blazor main page
+          curl -f "$BLAZOR_URL" || echo "⚠️ Blazor main page check failed"
       
       - name: Create deployment summary
         run: |
-          SERVICE_URL=${{ steps.get-url.outputs.service_url }}
+          API_URL=${{ steps.get-api-url.outputs.api_url }}
+          BLAZOR_URL=${{ steps.get-blazor-url.outputs.blazor_url }}
+          
           echo "## 🚀 Personal Info System Deployed Successfully!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Service URL:** [$SERVICE_URL]($SERVICE_URL)" >> $GITHUB_STEP_SUMMARY
+          echo "### 🔗 Service URLs" >> $GITHUB_STEP_SUMMARY
+          echo "- **Blazor UI:** [$BLAZOR_URL]($BLAZOR_URL)" >> $GITHUB_STEP_SUMMARY
+          echo "- **API:** [$API_URL]($API_URL)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Available Endpoints:**" >> $GITHUB_STEP_SUMMARY
-          echo "- Health Check: \`$SERVICE_URL/api/health\`" >> $GITHUB_STEP_SUMMARY
-          echo "- Persons: \`$SERVICE_URL/api/person\`" >> $GITHUB_STEP_SUMMARY
-          echo "- Addresses: \`$SERVICE_URL/api/address\`" >> $GITHUB_STEP_SUMMARY
-          echo "- Credit Cards: \`$SERVICE_URL/api/creditcard\`" >> $GITHUB_STEP_SUMMARY
+          echo "### 📋 Available Endpoints" >> $GITHUB_STEP_SUMMARY
+          echo "- Health Check: \`$API_URL/api/health\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Persons: \`$API_URL/api/person\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Addresses: \`$API_URL/api/address\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Credit Cards: \`$API_URL/api/creditcard\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Blazor UI:** [$SERVICE_URL]($SERVICE_URL)" >> $GITHUB_STEP_SUMMARY
+          echo "### 🎯 Quick Access" >> $GITHUB_STEP_SUMMARY
+          echo "**Start here:** [$BLAZOR_URL]($BLAZOR_URL) - Your Personal Info System UI" >> $GITHUB_STEP_SUMMARY
