--- a/src/PersonalInfoBlazor/appsettings.json
+++ b/src/PersonalInfoBlazor/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "https://api.personal-info.example.com"
+    "BaseUrl": "https://6pz6yc2hhw.us-east-2.awsapprunner.com"
   }
 }
